--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,8 +6,14 @@
     },
     "extends": [
         "plugin:react/recommended",
-        "standard-with-typescript"
+        "standard-with-typescript",
+				"prettier"
     ],
+		"settings": {
+			"react": {
+				"version": "detect"
+			}
+		},
     "overrides": [
     ],
     "parserOptions": {
@@ -15,8 +21,10 @@
         "sourceType": "module"
     },
     "plugins": [
-        "react"
+        "react",
+				"prettier"
     ],
     "rules": {
+			"prettier/prettier": "error"
     }
 }
