--- a/package.json
+++ b/package.json
@@ -29,7 +29,13 @@
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.31.8",
     "husky": "^8.0.1",
+    "lint-staged": "^13.0.3",
     "prettier": "^2.7.1",
     "typescript": "^4.8.4"
-  }
+  },
+	"lint-staged": {
+		"*.ts": [
+			"eslint . --ext .ts"
+		]
+	}
 }
