--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,13 +18,15 @@
     ],
     "parserOptions": {
         "ecmaVersion": "latest",
-        "sourceType": "module"
+        "sourceType": "module",
+				"project": ["./tsconfig.json"]
     },
     "plugins": [
         "react",
 				"prettier"
     ],
     "rules": {
-			"prettier/prettier": "error"
+			"prettier/prettier": "error",
+			"react/react-in-jsx-scope": "off"
     }
 }
