--- a/package.json
+++ b/package.json
@@ -15,10 +15,16 @@
     "url": "https://twitter.com/wllfaria_",
     "email": "dev.willians.faria@gmail.com"
   },
-  "dependencies": {},
+  "dependencies": {
+    "next": "^12.3.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
   "devDependencies": {
     "@commitlint/cli": "^17.1.2",
     "@commitlint/config-conventional": "^17.1.0",
+    "@types/node": "^18.8.2",
+    "@types/react": "^18.0.21",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.5.0",
@@ -33,9 +39,12 @@
     "prettier": "^2.7.1",
     "typescript": "^4.8.4"
   },
-	"lint-staged": {
-		"*.ts": [
-			"eslint . --ext .ts"
-		]
-	}
+  "lint-staged": {
+    "*.ts": [
+      "eslint . --ext .ts"
+    ],
+    "*.tsx": [
+      "eslint . --ext .tsx"
+    ]
+  }
 }
